--- a/road_trip/templates/user/login.html
+++ b/road_trip/templates/user/login.html
@@ -1,5 +1,5 @@
 {% load static %}
-<html lang="fa">
+<html lang="en">
 
 <body>
                                             <form action="" method="POST">
@@ -8,7 +8,7 @@
     <div class="form-group" >
 
 <label form="{{ form.username.id_for_label }}"></label>
-        <input placeholder="نام کاربری"  autocomplete="off" class="form-style"
+        <input placeholder="نام کاربری"  name= "username" autocomplete="off" class="form-style"
               {{ form.username}} {{ form.username.errors }} >
         <i class="input-icon uil uil-at"></i>
 
@@ -16,11 +16,11 @@
     <div class="form-group mt-3">
 
         <label form="{{ form.password.id_for_label }}"></label>
-        <input placeholder="رمز عبور"  autocomplete="off" class="form-style"
+        <input placeholder="رمز عبور" name="password" autocomplete="off" class="form-style"
                {{ form.password }} {{ form.password.errors }} >
         <i class="input-icon uil uil-lock-alt"></i>
     </div>
-        {% csrf_token%}
+    {% csrf_token%}
     <button type="submit" class="btn mt-4">تایید</button>
 </form>
 
